 * src/keybindings.c, src/keybindings.h, src/editor.c, src/editor.h,
   doc/geany.txt, doc/geany.html:
   Add 'Word part completion' keybinding so keys other than Tab can be
   used, or to clear/change the combination so Tab does full completion
   like before.
 * src/keybindings.c, src/keybindings.h, doc/geany.txt, doc/geany.html:
   Add 'Select to previous/next word part' keybindings.


2009-10-19  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * doc/geany.txt, doc/geany.html:
   Add 'Custom filetypes' section.
 * src/filetypes.c, src/filetypes.h, src/document.c,
   doc/geany.txt, doc/geany.html, tagmanager/tm_source_file.c,
   tagmanager/include/tm_source_file.h:
   Add filetype "tag_parser" key so custom filetypes can use an existing
   tag parser.
   Add tm_source_file_get_named_lang().
 * src/highlighting.c, src/filetypes.c, src/filetypes.h, doc/geany.txt,
   doc/geany.html:
   Add filetype "lexer_filetype" key so custom filetypes can use an
   existing lexer.


2009-10-19  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * THANKS, src/about.c:
   Add Xhacker Liu for his work at zh_CN translation to long list of
   translators.


2009-10-16  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/sciwrappers.c:
   Remove unnecessary line number margin padding.
 * scintilla/include/Scintilla.h, scintilla/include/Scintilla.iface,
   scintilla/ScintillaBase.h, scintilla/ScintillaBase.cxx,
   src/editor.c:
   Improve word part autocompletion so AC list is not cancelled and
   reshown (this also stops the selection changing).
   Add SCI_AUTOCGETCURRENTTEXT message (will be sent upstream).
 * src/editor.c:
   Improve CamelCase word part autocompletion for runs of capital letters.
 * src/editor.c:
   Don't complete snippets if there's a selection.


2009-10-16  Lex Trotman  <elextr(at)gmail(dot)com>

 * src/build.c:
   Fix crash opening project when Geany started with no geany.conf.

