@@ -3719,6 +3719,10 @@ visible).</td>
 <td>&nbsp;</td>
 <td>Focus the Compiler message window tab.</td>
 </tr>
+<tr><td>Switch to Messages</td>
+<td>&nbsp;</td>
+<td>Focus the Messages message window tab.</td>
+</tr>
 </tbody>
 </table>
 </div>
@@ -5788,7 +5792,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference" href="geany.txt">View document source</a>.
-Generated on: 2009-10-20 15:55 UTC.
+Generated on: 2009-10-20 16:54 UTC.
 Generated by <a class="reference" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
