@@ -270,6 +270,7 @@ enum
 	GEANY_KEYS_FOCUS_SEARCHBAR,
 	GEANY_KEYS_FOCUS_SIDEBAR,
 	GEANY_KEYS_FOCUS_COMPILER,
+	GEANY_KEYS_FOCUS_MESSAGES,
 	GEANY_KEYS_FOCUS_COUNT
 };
 
